# ai-learning-agent

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  ai_learning_agent_prd.md  biome.json  docker-compose.yml  install.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vllm_config.yaml
.github/workflows/: ci.yml
apps/obsidian-plugin/: esbuild.config.mjs  main.js  manifest.json  package.json  styles.css  tsconfig.json
apps/obsidian-plugin/src/: main.ts  settings.ts  sidecar.ts
apps/obsidian-plugin/src/chat/: ChatView.ts  FeedbackBar.ts  MessageRenderer.ts  ToolCallRenderer.ts  UploadZone.ts  sse-client.ts
apps/obsidian-plugin/src/knowledge/: GraphView.ts  TagSuggest.ts  WordCloudService.ts  WordCloudView.ts
apps/obsidian-plugin/src/ocr/: OcrService.ts  OcrView.ts
apps/obsidian-plugin/src/rag/: RagService.ts
docker/embedding/: Dockerfile  server.py
docs/: deployment-guide.md  ocr-integration-plan.md  phase2-knowledge-engine-plan.md  phase3-agent-plan.md  phase4-integration-plan.md  troubleshooting.md
python/backend/: package.json  pyproject.toml
python/backend/src/app/: config.py  constants.py  main.py
python/backend/src/app/api/: agent.py  chat.py  evolution.py  export.py  feedback.py  graph.py  health.py  models.py  ocr.py  rag.py  tags.py  upload.py  vault.py  wordcloud.py
python/backend/src/app/core/: dispatcher.py  event_bus.py  logging.py  tool_registry.py  vault_ops.py
python/backend/src/app/gateway/: context.py  coordinator.py  evolution_bridge.py  memory.py  router.py  session.py  tools_adapter.py
python/backend/src/app/gateway/agents/: __init__.py  operator.py  orchestrator.py  searcher.py  verifier.py
python/backend/src/app/infra/: embedding.py  exporter.py  file_watcher.py  graph.py  indexer.py  ocr.py  tag_engine.py  upload_pipeline.py  wordcloud.py
python/backend/src/app/llm/: client.py  manager.py  prompts.py  search.py
python/backend/src/app/models/: chat.py  notes.py  ocr.py  rag.py  tag.py  vault.py  wordcloud.py
python/backend/src/app/routes/: agent.py  chat.py  feedback.py  health.py  models.py  notes.py  ocr.py  rag.py  tags.py  upload.py  vault.py  wordcloud.py
python/backend/src/app/services/: embedding.py  indexer.py  llm_client.py  llm_manager.py  prompts.py  tag_service.py  tool_registry.py  vector_store.py  wordcloud_service.py
python/backend/src/evolution/: CONSTITUTION.md  RUBRIC.md  evaluator.py  mutator.py  runner.py
python/backend/src/evolution/EVALS/: test_suite_v1.json
python/backend/tests/: test_chat.py  test_coordinator.py  test_gateway.py  test_health.py  test_notes.py  test_ocr.py  test_rag.py  test_tags.py  test_tools.py  test_vault.py  test_wordcloud.py
