[project]
name = "ai-learning-backend"
version = "0.1.0"
description = "AI-native learning enhancement backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "lancedb>=0.18.0",
    "sentence-transformers>=3.0.0",
    "jieba>=0.42.0",
    "scikit-learn>=1.5.0",
    "watchdog>=6.0.0",
    "python-frontmatter>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["lancedb", "pyarrow", "jieba", "sklearn.*", "watchdog", "frontmatter", "sentence_transformers", "torch", "transformers", "nltk"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
